<resources>
    <string name="app_name">LensCommerce</string>
    <string name="main_latest_products">Latest Products</string>
    <string name="see_all">See All</string>
    <string name="main_popular_products">Popular Products</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_aboutUs">About Us</string>
    <string name="products_category">Products Category</string>
    <string name="browse_through_million_of_products_nin_many_category">Browse Through Million of Products in Many Category</string>
    <string name="category">Category</string>
    <string name="sorting">Sorting</string>
    <string name="filter">filter</string>
    <string name="filter_on">color, price,...</string>
    <string name="connection_error">Connection Error!</string>
    <string name="retry">Retry</string>
    <string-array name="sort_spinner">
        <item>Most visited</item>
        <item>Bestselling</item>
        <item>Prices from far to low</item>
        <item>Prices from low to high</item>
        <item>Newest</item>
    </string-array>
</resources>
