<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:textView="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/tools"
    android:background="@color/gray_200">

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

    <LinearLayout
        android:id="@+id/plist_filter"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:background="@color/gray_300"
        android:baselineAligned="false"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:visibility="visible">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginEnd="1dp"
            android:layout_weight="1"
            android:background="@android:color/white">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/product_list_change_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:background="?attr/selectableItemBackground"
                android:padding="12dp"
                android:scaleType="centerInside"
                app:tint="@color/gray_600"
                android:src="@drawable/list_larg" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/plist_sort"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="1dp"
            android:layout_weight="3"
            android:background="@android:color/white"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/sort_icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:gravity="left"
                android:src="@drawable/ic_sort_grey600_24dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:gravity="start|center_vertical|center_horizontal|center"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginBottom="-8dp"
                    android:fontFamily="@font/arial"
                    android:text="@string/sorting"
                    android:textColor="@color/gray_800"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/sort_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="32dp"
                    android:layout_gravity="left"
                    android:background="@null"
                    android:drawSelectorOnTop="true"
                    android:entries="@array/sort_spinner"
                    android:gravity="top|left|center_vertical|center_horizontal|center"
                    android:padding="0dp"
                    android:spinnerMode="dialog" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/plist_filtering"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="@color/primaryTextColor"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/filter_icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="8dp"
                android:gravity="left"
                android:src="@drawable/ic_filter" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:gravity="center_vertical|center_horizontal|center|start"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/arial"
                    android:gravity="left|center_vertical|center_horizontal|center"
                    android:text="@string/filter"
                    android:textColor="@color/gray_800"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/verdanaz"
                    android:gravity="right"
                    android:paddingLeft="5dp"
                    android:text="@string/filter_on"
                    android:textColor="@color/gray_600"
                    android:textSize="10sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/activityProductDetails_v_navigationBarBackground"
        android:layout_below="@+id/plist_filter">


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/productList_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/gray_500"
            android:overScrollMode="never"
            android:scrollbarStyle="insideOverlay"
            android:scrollbars="vertical" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/activityProductList_button_goToTop"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="bottom|left|center_vertical|center_horizontal|center"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/navigate_to_top_bg"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:rotation="-90"
            android:textColor="#dfffffff"
            android:tint="@color/primaryTextColor"
            android:visibility="invisible"
            textView:layout_behavior="@string/hide_bottom_view_on_scroll_behavior"
            textView:srcCompat="@drawable/ic_navigate_next_black_24dp" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <LinearLayout
        android:id="@+id/lazyLoading"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="38dp"
        android:background="@color/gray_200"
        android:gravity="center"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="center" />
    </LinearLayout>

    <View
        android:id="@+id/activityProductDetails_v_navigationBarBackground"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentBottom="true"
        android:background="#000" />
</RelativeLayout>
